aether-roc/default/ingress_aether-roc-gui-v2-1-ingress.yaml
# Source: aether-roc-umbrella/charts/aether-roc-gui-v2-1/templates/ingress.yaml
# SPDX-FileCopyrightText: 2020-present Open Networking Foundation <info@opennetworking.org>
#
# SPDX-License-Identifier: Apache-2.0
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: # kpt-merge: default/aether-roc-gui-v2-1-ingress
  name: aether-roc-gui-v2-1-ingress
  namespace: default
  labels:
    chart: "aether-roc-gui-v2-1-2.1.15"
    release: "aether-roc-umbrella"
    heritage: "Helm"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    internal.kpt.dev/upstream-identifier: 'networking.k8s.io|Ingress|default|aether-roc-gui-v2-1-ingress'
spec:
  tls:
  - secretName: aether-roc-gui-v2-1-secret
    hosts:
    - aether-roc-gui.onosproject.org
  rules:
  - host: aether-roc-gui.onosproject.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: aether-roc-gui-v2-1
            port:
              number: 80
